[package]
name = "mlss"
description = "moon life support system"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
sensor-scd30 = "0.4.0"
pmsa003i = { git = "https://github.com/hawkw/eclss", rev = "740c478111917bb4bfc95e008eb942b56bcd4bf9" }
sht4x = "0.1.0"
linux-embedded-hal = "0.3.2"
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
embedded-hal = "0.2.7"
log = "0.4.20"
env_logger = "0.10.1"
serde_json = "1.0.108"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "time"] }
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.12.1", features = ["http-listener"] }
shared-bus = { version = "0.3.1", features = ["std"] }
